# slitlessutils

./: .bandit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION.cff  LICENSE.rst  README.md  authors.txt  citation.cff  conftest.py  environment.yml  notes.md  pyproject.toml  pyproject.toml_FOO  pytest.ini  setup.cfg  setup.py  slitlessutils_plans.numbers  tox.ini
.github/: dependabot.yml
.github/workflows/: changelog_check.yml  check_milestone.yml  ci_cron_daily.yml  ci_cron_weekly.yml  ci_test_predeps.yml  ci_tests.yml  ci_workflows.yml  publish.yml
docs/: additional.rst  astrometry.rst  background.rst  calib.rst  citation.rst  conf.py  configure.rst  cosmicrays.rst  datastructs.rst  extraction.rst  faq.rst  getting_started.rst  glossary.rst  grouping.rst  index.rst  install.rst  instrumentfiles.rst  modules.rst  multi.rst  other.rst  regions.rst  simulation.rst  single.rst  sources.rst  t  tabulation.rst  wfss.rst
docs/ascii/: wcs.csv
docs/include/: wcs.csv
slitlessutils/: CITATION.rst  __init__.py  _version.py  config.py  conftest.py  info.py  logger.py
slitlessutils/core/: README.md  __init__.py
slitlessutils/core/astrometry/: README.md  __init__.py  astroimage.py  wcs.py  wcs_gen.py
slitlessutils/core/data/: __init__.py
slitlessutils/core/data/wfss/: __init__.py  load_wfss.py  observed.py  simulated.py  wfss.py  wfsscollection.py
slitlessutils/core/instrument/: __init__.py
slitlessutils/core/instrument/XML/: __init__.py  detectorconfig.py  extension.py  grating.py  instrumentconfig.py  noise.py  siaf.py  sip.py
slitlessutils/core/instrument/XML/polyclip/: polyclip.py
slitlessutils/core/instrument/XML/polyclip/src/: polyclip.c
slitlessutils/core/instrument/wfssconfig/: __init__.py  asciiconfig.py  flatfield.py  order.py  parametricpolynomial.py  sensitivity.py  spatialpolynomial.py
slitlessutils/core/modules/: __init__.py  module.py
slitlessutils/core/modules/extract/: __init__.py
slitlessutils/core/modules/extract/multi/: __init__.py  lcurve.py  matrix.py  menger.py  multi.py  optimizer.py  result.py
slitlessutils/core/modules/extract/single/: __init__.py  boxcar.py  contamination.py  single.py  spectraltable.py
slitlessutils/core/modules/group/: __init__.py  group.py  groupcollection.py
slitlessutils/core/modules/region/: __init__.py  region.py
slitlessutils/core/modules/simulate/: __init__.py  simulate.py
slitlessutils/core/modules/tabulate/: __init__.py  tabulate.py
slitlessutils/core/photometry/: __init__.py  avefnu.py  band.py  sed.py  t.py  throughput.py
slitlessutils/core/preprocess/: README.md  __init__.py
slitlessutils/core/preprocess/astrometry/: __init__.py  affinetweak.py  downgrade_wcs.py  list_wcs.py  syncwcs.py  upgrade_wcs.py  utils.py
slitlessutils/core/preprocess/astrometry/tests/: test_astrometry.py
slitlessutils/core/preprocess/background/: __init__.py  background.py  cartesian.py  cartesian2.py  mastersky.py
slitlessutils/core/preprocess/crrej/: __init__.py  crbitvalues.py  drizzle.py  group.py  laplace.py  laplace_orig.py
slitlessutils/core/preprocess/crrej/tests/: test_drizzle.py  test_group.py
slitlessutils/core/sources/: README.md  __init__.py  dispersedregion.py  operators.py  sedfile.py  source.py  sourcecollection.py  spectralregion.py
slitlessutils/core/sources/SAV/: source.py  sourcecollection.py
slitlessutils/core/sources/V1/: compoundsource.py  directimages.py  sedfile.py  simplesource.py  source.py  sourcecollection.py
slitlessutils/core/sources/V2/: sedfile.py  source.py  sourcecollection.py  spectralregion.py  t.py
slitlessutils/core/tables/: README.md  __init__.py  attributes.py  hdf5columns.py  hdf5file.py  hdf5table.py  odt.py  opt.py  pdt.py  pdtfile.py  rdt.py
slitlessutils/core/utilities/: __init__.py  as_iterable.py  compression.py  embedding.py  get_metadata.py  gzip.py  headers.py  indices.py  pool.py
slitlessutils/core/wfss/: __init__.py
slitlessutils/core/wfss/config/: README.md  __init__.py  disperser.py  flatfield.py  instrumentconfig.py  order.py  parametricpolynomial.py  pom.py  pom_sav.py  sensitivity.py  spatialpolynomial.py  wfssconfig.py
slitlessutils/core/wfss/config/polyclip/: README.md  __init__.py  polyclip.py
slitlessutils/core/wfss/config/polyclip/include/: polyclip.h
slitlessutils/core/wfss/config_orig/: __init__.py  disperser.py  flatfield.py  instrumentconfig.py  order.py  pom.py  wfssconfig.py
slitlessutils/core/wfss/config_orig/polyclip/: __init__.py  polyclip.py
slitlessutils/core/wfss/config_orig/polyclip/src/: _polyclip.c  polyclip.c
slitlessutils/core/wfss/data/: README.md  __init__.py  wfss.py  wfsscollection.py
slitlessutils/ds9regions/: __init__.py  annularregion.py  astroregion.py  attributes.py  compositeregion.py  ds9regions.py  enclosedregion.py  info.py  linearregion.py  onedregion.py  pandaregion.py  region.py
slitlessutils/examples/: __init__.py  acswfc.py  extract.py  extract_multi.py  mkscene.py  parameters.py  ring.py  simulate.py  starfield.py  velocity.py  wfc3ir.py  wfc3uvis.py  wr96.py
slitlessutils/examples/tests/: test_acswfc.py  test_extract_multi.py  test_ring.py  test_starfield.py  test_wr96.py
slitlessutils/tests/: README.md  test_acs_grism.py  test_config.py  test_photometry.py  test_sources.py  test_subarrays.py  test_wfss_simulated.py
