[build-system]
requires = ["setuptools", "setuptools-scm", "numpy>=1.22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "slitlessutils"
authors = [
    {name = "Russell Ryan", email = "rryan@stsci.edu"},
]
description = "A compendium of tools to analyze slitless spectroscopy"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy>=5.0.4",
    "astroquery",
    "drizzlepac",
    "h5py>=3.6.0",
    "networkx>=2.6.3",
    "numpy>=1.22.3",
    "matplotlib>=3.5.2",
    "pandas>=1.4.2",
    "psutil>=5.9.0",
    "pysiaf>=0.16.4",
    "scikit-image>=0.19.2",
    "scipy>=1.8.0",
    "shapely>=1.8.2",
    "tqdm>=4.64.0"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-astropy"
]
docs = [
    "sphinx-rtd-theme",
    "sphinx-astropy"
]
