[project]
name = 'slitlessutils'
description = 'A compendium of tools to analyze slitless spectroscopy'
readme = 'README.md'
license = 'BSD-3-Clause'
license-files = ['LICENSE.rst']
authors = [
    {name = 'Slitlessutils Developers'},
]
keywords = [
    'grism',
    'prism',
    'slitless spectroscopy',
    'HST',
    'WFC3',
    'UVIS',
    'IR',
    'ACS',
    'WFC',
    'SBC',
    'JWST',
    'NIRISS',
    'wide field'
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'astropy>=6.1',
    'astroquery>=0.4.7',
    'h5py>=3.11',
    'drizzlepac>=3.9.1',
    'networkx>=3.3',
    'numpy>=2.0',
    'matplotlib>=3.9',
    'pandas>=2.2',
    'psutil>=5.9.0',
    'pypolyclip>=1.0.0',
    'pysiaf>=0.16.4',
    'scikit-image>=0.23',
    'scipy>=1.12',
    'shapely>=2.0',
    'tqdm>=4.66'
]

[project.urls]
Homepage = 'https://github.com/spacetelescope/slitlessutils'
Documentation = 'https://slitlessutils.readthedocs.io/en/stable/'

[project.optional-dependencies]
test = [
    'pytest-astropy>=0.11',
    'tox>=4.12',
]
docs = [
    'sphinx-astropy>=1.6',
    'sphinx-rtd-theme',
]

[build-system]
requires = [
    'setuptools>=77.0',
    'setuptools-scm>=8.1',
    'numpy>=2.0',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = 'slitlessutils/version.py'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    'slitlessutils',
    'docs',
]
norecursedirs = [
    'docs/_build',
    'extern',
]
astropy_header = true
doctest_plus = 'enabled'
text_file_format = 'rst'
addopts = '--color=yes --doctest-rst'
xfail_strict = true
remote_data_strict = false
filterwarnings = [
    'error',  # turn warnings into exceptions
    'ignore:numpy.ufunc size changed:RuntimeWarning',
    'ignore:numpy.ndarray size changed:RuntimeWarning',
    # drizzlepac warnings
    "ignore: .*pkg_resources.*:DeprecationWarning",
    'ignore:unclosed file:ResourceWarning',
    'ignore: Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.:UserWarning',
    # Ignore warning from astropy.io
    'ignore: Card is too long, comment will be truncated.',
    # Ignore cast warning in drizzle
    'ignore: invalid value encountered in cast:RuntimeWarning'
]

[tool.coverage.run]
omit = [
    'slitlessutils/conftest.py',
    'slitlessutils/tests/*',
    'slitlessutils/*/tests/*',
    'slitlessutils/version*',
    '*/slitlessutils/tests/*',
    '*/slitlessutils/*/tests/*',
    '*/slitlessutils/version*',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'except ImportError',
    'raise AssertionError',
    'raise NotImplementedError',
    'def main\\(.*\\):',
    'pragma: py{ignore_python_version}',
    'def _ipython_key_completions_',
]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
