[metadata]
name = slitlessutils
version = 0.0.1
author = Russell Ryan
author_email = rryan@stsci.edu
description = A compendium of tools to analyze slitless spectroscopy
long_description = This builds on the pyLINEAR to include simple extraction and spectral modeling
license = MIT License
keywords = grism, prism, slitless spectroscopy, HST, WFC3, ACS, JWST, NIRISS
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >=3.10
packages = find:
install_requires =
  astropy>=5.0.4
  h5py>=3.6.0
  networkx>=2.6.3
  numpy>=1.22.3
  matplotlib>=3.5.2
  pandas>=1.4.2
  psutil>=5.9.0
  pysiaf>=0.16.4
  scikit-image>=0.19.2
  scipy>=1.8.0
  shapely>=1.8.2
  tqdm>=4.64.0

#[options.package_data]
#[options.entry_points]
