[metadata]
name = slitlessutils
version = 0.0.1
author = Russell Ryan
author_email = rryan@stsci.edu
description = A compendium of tools to analyze slitless spectroscopy
long_description = Tools to extract, simulate, and model wide-field slitless spectroscopy developed for the Hubble Space Telescope, but may be useful for 
license = MIT License
keywords = grism, prism, slitless spectroscopy, HST, WFC3, ACS, JWST, NIRISS, wide field
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.10
packages = find:
setup_requires = setuptools_scm
install_requires =
  astropy>=5.0.4
  astroquery
  h5py>=3.6.0
  networkx>=2.6.3
  numpy>=1.22.3
  matplotlib>=3.5.2
  pandas>=1.4.2
  psutil>=5.9.0
  pysiaf>=0.16.4
  scikit-image>=0.19.2
  scipy>=1.8.0
  shapely>=1.8.2
  tqdm>=4.64.0

#[options.package_data]
#[options.entry_points]

[flake8]
max-line-length = 100
# E123: closing bracket does not match indentation of opening bracket's line
# E126: continuation line over-indented for hanging indent
# E226: missing whitespace around arithmetic operator
# E402: Module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore = E123,E126,E226,E402,W503,W504
